cmake_minimum_required(VERSION 3.14)
project(Bilibili_lanqiao_codes)

set(CMAKE_CXX_STANDARD 14)

add_executable(Bilibili_lanqiao_codes main.cpp)
add_executable(sort_demo sort_demo.cpp)
add_executable(question_1 question_1.cpp)
add_executable(question_2 question_2.cpp)
add_executable(question_3 question_3.cpp)
add_executable(question_4 question_4.cpp)
add_executable(question_5 question_5.cpp)
add_executable(question_6 question_6.cpp)
add_executable(question_7 question_7.cpp)
add_executable(question_8 question_8.cpp)
add_executable(question_9 question_9.cpp)
add_executable(meiju_1 meiju_1.cpp)
add_executable(STL_vector STL_vector.cpp)
add_executable(STL_set STL_set.cpp)
add_executable(STL_map STL_map.cpp)